--- a/results.html
+++ b/results.html
@@ -150,7 +150,7 @@
     <h3>Designing Interactions for Artificial Commensal Companions</h3>
     <p><strong>Authors:</strong> Hunter Fong, Selim Soufargi, Maurizio Mancini, Radoslaw Niewiadomski</p>
     <p><strong>Conference:</strong> 
-      <a href="https://dis.acm.org/2025/" target="_blank">
+      <a href="https://dis.acm.org/2025/" target="_blank" class="conference">
         2025 ACM Designing Interactive Systems Conference (DIS 2025), July 5–9, 2025, Madeira, Portugal
       </a>
     </p>
@@ -166,7 +166,7 @@
     <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
     <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
     <p><strong>Conference:</strong> 
-      <a href="https://dis.acm.org/2025/" target="_blank">
+      <a href="https://dis.acm.org/2025/" target="_blank" class="conference">
         2025 ACM Designing Interactive Systems Conference (DIS 2025), July 5–9, 2025, Madeira, Portugal
       </a>
     </p>
@@ -181,7 +181,7 @@
     <h3>A Social Robot Companion for Individuals Eating Alone</h3>
     <p><strong>Authors:</strong> Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski, Maurizio Mancini</p>
     <p><strong>Conference:</strong> 
-      <a href="https://iui.acm.org/2025/" target="_blank">
+      <a href="https://iui.acm.org/2025/" target="_blank" class="conference">
         30th Annual ACM Conference on Intelligent User Interfaces (IUI 2025), March 24-27, 2025, Cagliari, Italy
       </a>
     </p>
@@ -197,7 +197,7 @@
     <h3>Automatic Recognition of Commensal Activities in Co-located and Online settings</h3>
     <p><strong>Authors:</strong> Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.</p>
     <p><strong>Conference:</strong> 
-      <a href="https://icmi.acm.org/2024/" target="_blank">
+      <a href="https://icmi.acm.org/2024/" target="_blank" class="conference">
         26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
       </a>
     </p>
@@ -212,7 +212,7 @@
     <h3>Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings</h3>
     <p><strong>Authors:</strong> Hoxha, A., Fong, H., Niewiadomski, R.</p>
     <p><strong>Conference:</strong> 
-      <a href="https://icmi.acm.org/2024/" target="_blank">
+      <a href="https://icmi.acm.org/2024/" target="_blank" class="conference">
         26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
       </a>
     </p>
@@ -227,7 +227,7 @@
     <h3>Sounding bodies: Exploring sonification to promote physical contact</h3>
     <p><strong>Authors:</strong> Chiara Gulino, Radoslaw Niewiadomski</p>
     <p><strong>Conference:</strong> 
-      <a href="https://avi2024.dibris.unige.it/" target="_blank">
+      <a href="https://avi2024.dibris.unige.it/" target="_blank" class="conference">
         17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
       </a>
     </p>
@@ -241,7 +241,7 @@
     <h3>Multimodal interactive VR mindfulness experience</h3>
     <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
     <p><strong>Conference:</strong> 
-      <a href="https://avi2024.dibris.unige.it/" target="_blank">
+      <a href="https://avi2024.dibris.unige.it/" target="_blank" class="conference">
         17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
       </a>
     </p>
@@ -255,7 +255,7 @@
     <h3>First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024)</h3>
     <p><strong>Authors:</strong> Niewiadomski, R., Altarriba Bertran, F., Dawes, C., Obrist, M., Mancini, M.</p>
     <p><strong>Conference:</strong> 
-      <a href="https://icmi.acm.org/2024/" target="_blank">
+      <a href="https://icmi.acm.org/2024/" target="_blank" class="conference">
         26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
       </a>
     </p>
@@ -269,7 +269,7 @@
     <h3>A Virtual Agent as a Commensal Companion</h3>
     <p><strong>Authors:</strong> Mancini, M., Niewiadomski, R., De Lucia, G., Longobardi, F.M.</p>
     <p><strong>Conference:</strong> 
-      <a href="https://iva.acm.org/2024/" target="_blank">
+      <a href="https://iva.acm.org/2024/" target="_blank" class="conference">
         24th ACM International Conference on Intelligent Virtual Agents (IVA 2024), September 16–19, 2024, Glasgow, United Kingdom
       </a>
     </p>
@@ -283,9 +283,8 @@
   <div class="pub">
     <h3>How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity</h3>
     <p><strong>Authors:</strong> Tiuleneva M., Castano E., Niewiadomski, R.</p>
-    <p><strong>Conference:</strong> ACII 2024, September 15–18, Glasgow, UK</p>
     <p><strong>Conference:</strong> 
-      <a href="https://acii-conf.net/2024/" target="_blank">
+      <a href="https://acii-conf.net/2024/" target="_blank" class="conference">
         12th International Conference on Affective Computing & Intelligent Interaction (ACII 2024), September 15–18, 2024, Glasgow, United Kingdom
       </a>
     </p>
@@ -298,22 +297,40 @@
   <style>
   /* Default styling for links */
   a {
-    color: #888 !important; /* Ensure soft gray color on all links */
-    font-size: 0.9em; /* Slightly smaller text */
-    text-decoration: none; /* No underline, more subtle */
+    color: #1a73e8; /* Default blue for links */
+    font-size: 1em; /* Standard text size for normal links */
+    text-decoration: none; /* No underline */
+    display: inline-flex;
+    align-items: center;
   }
 
-  /* Hover effect */
-  a:hover {
-    color: #4da6ff; /* Lighter blue when hovering */
+  /* Icon styling */
+  i {
+    margin-right: 5px; /* Adds space between the icon and the text */
+    background: none !important; /* Removes any background around the icon */
+    padding: 0 !important; /* Removes padding around icon */
+    color: #888 !important; /* Ensures the icon is the same gray as the text */
+  }
+
+  /* Styling for conference links (to make them subtle) */
+  .pub a.conference {
+    color: #888 !important; /* Soft gray color for conference links */
+    font-size: 0.9em; /* Slightly smaller text for conference links */
+    text-decoration: none; /* No underline */
+  }
+
+  /* Hover effect for conference links */
+  .pub a.conference:hover {
+    color: #4da6ff; /* Light blue on hover */
     text-decoration: underline; /* Underline on hover */
   }
 
-  /* Icon styling (space between icon and text) */
-  i {
-    margin-right: 5px; /* Adds space between the icon and the text */
+  /* Hover effect on icons (same as links) */
+  a:hover i {
+    color: #4da6ff; /* Change icon color to match the text hover color */
   }
 </style>
+
 
 
   <footer>
